# Gaze

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
CMake/: CompilerUtils.cmake
Data/Engine/Assets/3D/Scenes/: Default.blend
Data/Engine/Config/Net/: Client.conf  Server.conf
demo/: CMakeLists.txt
demo/Games/: CMakeLists.txt
demo/Games/BrickPopper/: CMakeLists.txt  Client.cpp  Common.hpp  Server.cpp
demo/Games/Pong/: CMakeLists.txt  Client.cpp  Server.cpp  Type.hpp  main.cpp
demo/HelloInput/: CMakeLists.txt  main.cpp
demo/HelloRenderer/: CMakeLists.txt  main.cpp
demo/HelloViewport/: CMakeLists.txt  main.cpp
demo/HelloWindow/: CMakeLists.txt  main.cpp
demo/HelloWorld/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/Client/: CMakeLists.txt
lib/Client/include/Client/: App.hpp
lib/Client/src/: App.cpp
lib/Client/tests/: CMakeLists.txt  dummy.cpp
lib/Config/: CMakeLists.txt
lib/Config/include/Config/: Configuration.hpp  Parser.hpp
lib/Config/src/: Configuration.cpp  Parser.cpp
lib/Core/: CMakeLists.txt
lib/Core/include/Core/: Platform.hpp  PlatformUtils.hpp  Type.hpp
lib/Debug/: CMakeLists.txt
lib/Debug/include/Debug/: Assert.hpp
lib/Debug/src/: Assert.cpp
lib/Events/: CMakeLists.txt
lib/Events/include/Events/: Dispatcher.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
lib/GFX/: CMakeLists.txt
lib/GFX/include/GFX/: API.hpp  Camera.hpp  Light.hpp  Material.hpp  Mesh.hpp  Object.hpp  Primitives.hpp  Renderer.hpp  pch.hpp
lib/GFX/include/GFX/Platform/OpenGL/: Renderer.hpp
lib/GFX/include/GFX/Platform/OpenGL/Objects/: Framebuffer.hpp  IndexBuffer.hpp  Object.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
lib/GFX/include/GFX/Platform/Software/: Renderer.hpp
lib/GFX/include/GFX/Platform/Software/Linux/: Renderer.hpp
lib/GFX/include/GFX/Platform/Software/Linux/X11/: Renderer.hpp
lib/GFX/src/: API.cpp  Camera.cpp  Mesh.cpp  Object.cpp  Primitives.cpp  Renderer.cpp
lib/GFX/src/Platform/OpenGL/: Renderer.cpp
lib/GFX/src/Platform/OpenGL/Objects/: Framebuffer.cpp  IndexBuffer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
lib/GFX/src/Platform/Software/Linux/X11/: Renderer.cpp
lib/Geometry/: CMakeLists.txt
lib/Geometry/include/Geometry/: Mesh.hpp
lib/Geometry/src/: Mesh.cpp
lib/IO/: CMakeLists.txt
lib/IO/include/IO/Loader/: Scene.hpp
lib/IO/src/Loader/: Scene.cpp
lib/Input/: CMakeLists.txt
lib/Input/include/Input/: Input.hpp  KeyCode.hpp
lib/Input/src/: Input.cpp
lib/Log/: CMakeLists.txt
lib/Log/include/Log/: Logger.hpp
lib/Log/src/: Logger.cpp
lib/Math/: CMakeLists.txt
lib/Math/include/Math/: Util.hpp  Vector.hpp
lib/Math/test/: CMakeLists.txt  Vector.cpp
lib/Net/: CMakeLists.txt
lib/Net/include/Net/: Client.hpp  Core.hpp  Packet.hpp  Server.hpp  Type.hpp
lib/Net/src/: Client.cpp  Core.cpp  Packet.cpp  Server.cpp
lib/Physics/: CMakeLists.txt
lib/Physics/include/Physics/: Rigidbody.hpp  Shape.hpp  World.hpp
lib/Physics/src/: Rigidbody.cpp  Shape.cpp  World.cpp
lib/Test/: CMakeLists.txt
lib/WM/: CMakeLists.txt
lib/WM/include/WM/: Core.hpp  Window.hpp  pch.hpp
lib/WM/src/: Core.cpp  Window.cpp
lib/WM/tests/: CMakeLists.txt  Core.cpp
src/: CMakeLists.txt
src/Sandbox/: CMakeLists.txt
src/Sandbox/src/: Client.cpp  Server.cpp  main.cpp
src/Sandbox/tests/: CMakeLists.txt  dummy.cpp
